buttony na evolution

--- a/src/components/scss/main.scss
+++ b/src/components/scss/main.scss
@@ -161,6 +161,7 @@ height: 200px;
 .image-evolution{
     width: 120px;
     margin: auto;
+    display: flex;
 }
 .image-small{
     background-position: -10px -10px;    height: 80px !important; /* Visible height */
