--- a/src/components/scss/main.scss
+++ b/src/components/scss/main.scss
@@ -185,7 +185,8 @@ height: 200px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        max-width: 540px;    }
+        max-width: 540px;
+    gap:10px    }
   
 }
 
