dodane weakness i poprawki stylowania

--- a/src/components/scss/main.scss
+++ b/src/components/scss/main.scss
@@ -7,10 +7,16 @@ button{
 }
 legend{
     text-align: left;
+    width: 30%;
+    white-space: nowrap;
+    p{
+        text-align: right;
+    }
 }
 p{
-    margin: 5px;
-    text-align: right;
+    // margin: 5px;
+    text-align: center;
+    margin-bottom: 0;
 }
 
 h1, h2, h3, span, button, legend{
@@ -20,6 +26,8 @@ h1, h2, h3, span, button, legend{
 h2{
     text-align: left;
     font-size: 16px;
+    white-space: nowrap;
+
 }
 h3{
     font-weight: 300;
@@ -88,7 +96,7 @@ margin-bottom: 25px;
     background-color: red;
   }
 
-  header{
+  .header{
     width: 90%;
 display: flex;
 flex-wrap: wrap;
@@ -137,7 +145,14 @@ padding-bottom: 20px;
 margin:auto;
 .description{
     
-    width: 300px;
+    width: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    h2{
+        width: 45%;
+        text-align: right;
+    }
 }
 .description-img{
 width: 200px;
@@ -149,6 +164,7 @@ height: 200px;
         width: 90%;
         padding: 10px;
         background-color: $blue;
+        gap: 5px
     
           }
     
@@ -193,4 +209,14 @@ height: 200px;
 .button-evolution{
     background-color: $gray;
     border-radius: 20px;
+}
+
+.abilities{
+    width: unset !important;
+}
+
+.container-abilities{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
