--- a/src/components/scss/main.scss
+++ b/src/components/scss/main.scss
@@ -17,6 +17,8 @@ p{
     // margin: 5px;
     text-align: center;
     margin-bottom: 0;
+    white-space: nowrap;
+
 }
 
 h1, h2, h3, span, button, legend{
@@ -104,7 +106,7 @@ justify-content: space-between;
 div:nth-child(1), div:nth-child(3){
     width: 25%;
     display: flex;
-    background-color: $blue;
+    // background-color: $blue;
     border-radius: 30px;
 }
 
@@ -190,6 +192,7 @@ height: 200px;
    width: 100%;
    height: 100%;
     display: grid;
+    background-color: $blue;
 }
 
 .container-evolution{
