--- a/src/components/scss/main.scss
+++ b/src/components/scss/main.scss
@@ -168,7 +168,8 @@ height: 200px;
         width: 90%;
         padding: 10px;
         background-color: $blue;
-        gap: 5px
+        // gap: 5px;
+        justify-content: space-around;
     
           }
     
