--- a/src/components/scss/main.scss
+++ b/src/components/scss/main.scss
@@ -24,11 +24,14 @@ p{
 h1, h2, h3, span, button, legend{
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    
 }
 h2{
     text-align: left;
     font-size: 16px;
     white-space: nowrap;
+    width: max-content
+    
 
 }
 h3{
@@ -63,6 +66,7 @@ input {
   }
   
   .container{
+    position: relative;
     display: flex;
     flex-wrap: wrap;
 width: 100%;
@@ -132,7 +136,7 @@ div:nth-child(3){
 
   .container-popUp{
     width: 800px;
-    position: fixed;
+    position: absolute;
     top: 5px;
     left: 0;
     z-index: 999;
@@ -176,14 +180,6 @@ height: 200px;
 }
 
 
-
-
-
-.image-evolution{
-    width: 120px;
-    margin: auto;
-    display: flex;
-}
 .image-small{
     background-position: -10px -10px;    height: 80px !important; /* Visible height */
     width: 80px !important; /* Visible width */
@@ -194,27 +190,6 @@ height: 200px;
    height: 100%;
     display: grid;
     background-color: $blue;
-}
-
-.container-evolution{
-    width: 90%;
-    background-color: $blue;
-    display: flex;
-    padding: 10px;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    div{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        max-width: 540px;
-    gap:10px    }
-  
-}
-
-.button-evolution{
-    background-color: $gray;
-    border-radius: 20px;
 }
 
 .abilities{
