nowe evolution gotowe

--- a/src/components/scss/evolution.scss
+++ b/src/components/scss/evolution.scss
@@ -3,6 +3,7 @@
     margin: auto;
     display: flex;
     align-items: flex-start;
+    justify-content: center;
     h2, button{
         margin: auto 0px auto 0px;
     }
