--- a/src/components/scss/list.scss
+++ b/src/components/scss/list.scss
@@ -18,7 +18,7 @@ height: 240px;
 display: flex;
 justify-content: center;
 flex-wrap: wrap;
-background-color: $gray;
+background-color: $blue;
 img{
     width: 75%;
     height: 75%;
