--- a/src/components/scss/popup.scss
+++ b/src/components/scss/popup.scss
@@ -1,4 +1,4 @@
-$gray: #dae4ed;
+$blue: #94c6ea;
 
 span{
     font-weight: 500;
@@ -16,7 +16,7 @@ top: 5px;
 left: 0;
 z-index: 999;
 right: 0;
-background-color: $gray;
+background-color: $blue;
 display: flex;
 flex-wrap: wrap;
 justify-content: space-between;
