--- a/src/components/scss/description.scss
+++ b/src/components/scss/description.scss
@@ -1,3 +1,4 @@
+$gray: #dae4ed;
 
 
 .container-description{
@@ -5,6 +6,8 @@
 display: flex;
 flex-wrap: wrap;
 justify-content: space-between;
+background-color: $gray;
+padding: 10px;
 h2{
     width: 75%;
 text-align: right;
