--- a/src/components/scss/popup.scss
+++ b/src/components/scss/popup.scss
@@ -11,7 +11,7 @@ font-size: 30px;
 
 .container-popup{
     width: 700px;
-position: absolute;
+position: fixed;
 top: 5px;
 left: 0;
 z-index: 999;
