okno ze scrollem

--- a/src/components/scss/description.scss
+++ b/src/components/scss/description.scss
@@ -6,6 +6,7 @@ $gray: #dae4ed;
 display: flex;
 flex-wrap: wrap;
 justify-content: space-between;
+align-items: center;
 background-color: $gray;
 padding: 10px;
 h2{
