--- a/src/components/scss/header.scss
+++ b/src/components/scss/header.scss
@@ -8,19 +8,11 @@ flex-wrap: wrap;
 justify-content: space-between;
 height: 120px;
 
-.image-small{
-    display: flex;
-    // background-color: $blue;
-    border-radius: 30px;
-    background-position: -10px -10px;
-    height: 80px !important;
-    margin: 0;
-    width: 80px;
-}
-.container-btn-small{
-    width: 120px;
-}
+
+
 button{
+    border-radius: 30px;
+
     width: 120px;
     height: 120px;
      display: flex;
@@ -30,6 +22,13 @@ button{
      align-items: center;
      h3{
         text-align: center;
+     }
+     div{
+        display: flex;
+        background-position: -10px -10px;
+        height: 80px !important;
+        margin: 0;
+        width: 80px;
      }
 }
 
