--- a/src/components/scss/popup.scss
+++ b/src/components/scss/popup.scss
@@ -27,7 +27,7 @@ margin: auto;
 top: 5px;
 bottom: 5px;
 position: fixed;
-overflow-y: scroll;
+overflow-y: auto;
 overflow-x: hidden;
 }
 .container-popup,section, .bar{
