--- a/src/components/scss/evolution.scss
+++ b/src/components/scss/evolution.scss
@@ -18,14 +18,13 @@ $blue : #94c6ea;
     h2, button{
         margin: auto 0px auto 0px;
     }
-    h1{
-
-
-        width: 100%;
-    }
+    
     h3{
         text-align: center;
         width: 100%;
+    }
+    h2{
+        font-size: 50px;
     }
     div{
         display: flex;
