--- a/src/components/scss/popup.scss
+++ b/src/components/scss/popup.scss
@@ -10,7 +10,6 @@ font-size: 30px;
 }
 
 .container-popup{
-    //   scrollbar-color: red orange;
  
     width: 700px;
 position: fixed;
@@ -25,6 +24,7 @@ gap: 10px;
 padding: 25px;
 margin: auto;
 top: 5px;
+// bottom: 20px;
 position: fixed;
 overflow-y: auto;
 overflow-x: hidden;
