--- a/src/components/scss/description.scss
+++ b/src/components/scss/description.scss
@@ -13,6 +13,11 @@ h2{
     width: 75%;
 text-align: right;
 }
+h1{
+    font-size: 16px;
+    text-align: center;
+    margin-bottom: 10px;
+}
 div{
     width: 100%;
 display: flex;
@@ -23,7 +28,7 @@ justify-content: space-between;
 
 
 .img-description{
-    width: 240px;
+    width: 260px;
 }
 .img-btn{
     width: 90px;
