--- a/src/components/scss/description.scss
+++ b/src/components/scss/description.scss
@@ -1,22 +1,25 @@
 $gray: #dae4ed;
 
-
 .container-description{
-    width: 380px;
+    gap: 10px
+}
+// .container-description{
+  .list-description{
+    // gap: 5px;
+    width: 60%;
 display: flex;
 flex-wrap: wrap;
-justify-content: space-between;
+// justify-content: space-between;
 align-items: center;
 background-color: $gray;
 padding: 10px;
+border-radius: 30px;
 h2{
-    width: 75%;
 text-align: right;
 }
 h1{
-    font-size: 16px;
+    // margin-bottom: 10px;
     text-align: center;
-    margin-bottom: 10px;
 }
 div{
     width: 100%;
@@ -28,7 +31,10 @@ justify-content: space-between;
 
 
 .img-description{
-    width: 260px;
+    // max-width: 360px;
+    // width: 260px;
+    width: 40%;
+    padding: 10px;
 }
 .img-btn{
     width: 90px;
@@ -39,3 +45,42 @@ justify-content: space-between;
     width: 200px;
     height: 200px;
 }
+
+
+@media (max-width: 500px) {
+  .container-description{
+    display: grid;
+    
+  }
+  h1{
+    font-size: 16px;
+    
+  }
+  .img-description, .list-description{
+    width: 100%;
+    padding-right: 0;
+    padding-left: 0;
+     div{
+        padding-right: 10px;
+        padding-left: 10px;
+    }
+  
+  }
+  .list-description h1{
+    font-size: 16px;
+    width: 90%;
+    margin: auto;
+}
+}
+@media (max-width: 600px)  and (min-width: 500px){
+    .list-description {
+        h1{
+            font-size: 13px;
+        }
+        h2,h3{
+            font-size: 12px;
+        }
+    }
+   
+}
+
