--- a/src/components/scss/header.scss
+++ b/src/components/scss/header.scss
@@ -2,11 +2,12 @@ $gray: #dae4ed;
 
 
 header{
-    width: 100%;
-display: flex;
-flex-wrap: wrap;
-justify-content: space-between;
-
+   
+h1{
+   font-size: 25px;
+   width: unset;
+   text-align: center;
+}
 
 
 button{
@@ -25,10 +26,44 @@ button{
      div{
         display: flex;
         background-position: -10px -10px;
-        height: 80px !important;
+        height: 80px;
         margin: 0;
         width: 80px;
      }
 }
 
 }
+@media (max-width: 400px) {
+   header{
+
+   
+  
+   button{
+      width: 100px;
+      height: 95px;
+      h3{
+         font-size: 10px;
+         width: 100%;
+      }
+      div{
+         background-position: -20px -15px;
+         width: 60px;
+         height: 60px;
+      }
+   }
+}
+   
+   }
+ 
+   @media (max-width: 450px) {
+      .arrow{
+         display: none;
+      }
+      header{
+         h1{
+            font-size: 20px;
+         }
+      }
+     
+   }
+
