--- a/src/components/scss/list.scss
+++ b/src/components/scss/list.scss
@@ -1,12 +1,12 @@
 $blue: #94c6ea;
 $gray: #dae4ed;
 .container-list{
+    min-width: 250px;
     position: relative;
 display: flex;
 flex-wrap: wrap;
 width: 100%;
 justify-content: center;
-min-width: 620px;
 max-width: 1300px;
 margin: 0px auto auto auto;
 gap: 10px;
@@ -24,4 +24,16 @@ img{
     height: 75%;
 }
 }
+}
+@media (max-width: 520px){
+    .container-list button{
+        width: 120px;
+        height: 120px;
+        h2{
+            font-size: 10px;
+        }
+    }
+    input{
+        font-size: 10px;
+    }
 }
