--- a/src/components/scss/main.scss
+++ b/src/components/scss/main.scss
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap');
 $blue: #94c6ea;
 $gray: #dae4ed;
+section, header{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 30px;
+}
+
 button{
     all:unset;
     cursor: pointer;
@@ -17,16 +24,17 @@ h1, h2, h3, span, button, legend{
     
 }
 h1{
-    font-size: 25px;
+    font-size: 16px;
+    // text-align: center;
+    width: 100%;
+
 }
+
 h2, h3{
     font-size: 16px;
-    width: max-content
+    // width: max-content
 }
-h2{
-    white-space: nowrap;
-    
-}
+
 h3{
     
     font-weight: 300;
@@ -48,7 +56,9 @@ input {
     font-size: 20px;
   }
   
-
+.container-stats, .container-evolution{
+    flex-wrap: wrap;
+}
  
 
   .btn-next{
