--- a/src/components/scss/evolution.scss
+++ b/src/components/scss/evolution.scss
@@ -8,7 +8,6 @@ $blue : #94c6ea;
     background-color: $gray;
     padding: 10px;
     button{
-        // background-color: $blue;
         border: 2px solid $blue;
 
     }
@@ -21,7 +20,8 @@ $blue : #94c6ea;
         width: 100%;
     }
     h2{
-        font-size: 25px;
+        font-size: 20px;
+        display: inline;
         
     }
     h2::before {
@@ -29,101 +29,77 @@ $blue : #94c6ea;
       }
     div{
         display: flex;
-        // max-width: 250px;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         gap:5px;
+        div{
+                      margin: auto;
+            flex-wrap: wrap;
+            // justify-content: center;
+        }
+      button{
+        margin: 5px;
+        width: 130px;
+        height: 160px;
+
+      }
        
     }
-    .second-evolution{
-        max-width: calc(100% - 150px);
-    }
+   
     img{
-        width: 120px;
+        width: 100%;
     }
-    
+  
 
 }
-
-@media(min-width: 750px) and (max-width: 1200px){
-    .button-evolution img{
-        width: 150px;
-    }
-    .container-evolution .second-evolution {
-        max-width: calc(100% - 180px);
-      }
-}
-
-
-    @media (max-width: 649px) and (min-width: 501px) {
-        .container-evolution{
-          
-
-            flex-wrap: wrap;
-            justify-content: center;
-           
-            h2{
-                width: 100%;
-                text-align: center;
-
-            }
-           h2::before {
-                content: "▼";
-              }
-         
-           div{
-            width: 100%;
-justify-content: center;
-
-           }
-      
-      
-        
-        }
-        .button-evolution{
-            width: 45%;
-            display: grid;
-            justify-content: center;
-            img{
-                width: 80%;
-                margin: auto;
-            }
-           }
-           .second-evolution{
-            max-width: unset !important;
-           }
-    }
+@media (min-width: 600px) {
     
- @media (max-width:500px){
+}
+@media (max-width: 600px) and (min-width: 541px) {
     .container-evolution{
-        justify-content: center;
         div{
-            display: flex;
-            justify-content: center;
+            button{
+                width: 110px;
+                height: 130px;
+            }
         }
-        h2::before {
-            content: "▼";
-          }
+    }
+}
+
+
+@media(max-width: 540px) {
+
+  .container-evolution{
+    div{
+        display: flex !important;
+        justify-content: center;
+                flex-wrap: wrap;
+        div{
+            display: inline-block;
+        }
+        button{
+            width: unset;
+            height: unset;
+        }
     }
     h2{
+        width: 100%;
         text-align: center;
         
+
     }
-    // h2::before {
-    //     content: "▼";
-    //   }
-    .container-evolution   .second-evolution{
-        max-width: unset;
-    }
-    .button-evolution{
-        width: 90%;
-        display: grid;
-        justify-content: center;
-        
-        img{
-            width: 80%;
-            margin: auto;
-        }
-       }
- }
+    h2::before {
+        content: "▼";
+      }
+      img{
+        width: 200px;
+      }
+  }
+    
+    
+   
+}
+
+
+   
          
    
