--- a/src/components/scss/header.scss
+++ b/src/components/scss/header.scss
@@ -56,12 +56,15 @@ button{
    }
  
    @media (max-width: 450px) {
-      .arrow{
-         display: none;
-      }
+     
       header{
          h1{
             font-size: 20px;
+         }
+         button{
+            h3{
+               display: none;
+            }
          }
       }
      
