--- a/src/components/scss/popup.scss
+++ b/src/components/scss/popup.scss
@@ -24,9 +24,9 @@ gap: 10px;
 padding: 25px;
 margin: auto;
 top: 5px;
-// bottom: 20px;
+bottom: auto;
+max-height: 100%;
 overflow-y: auto;
-overflow-x: hidden;
 width: 90%;
 }
 
