--- a/src/components/scss/popup.scss
+++ b/src/components/scss/popup.scss
@@ -25,9 +25,9 @@ padding: 25px;
 margin: auto;
 top: 5px;
 bottom: auto;
-max-height: 100%;
 overflow-y: auto;
 width: 90%;
+max-height: 90% !important;
 }
 
   @media (max-width: 400px)  {
